Removing >Java8 constructs
Removing >Java8 constructs